Migrated to Java 18 and SB 3.0